--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -23,7 +23,7 @@
                <form action="#" method="post">
                   <div class="form-group">
                      <input
-                        type="email"
+                        type="text"
                         id="email"
                         name="email"
                         placeholder="mail@example.com"
