--- a/views/layouts/message.ejs
+++ b/views/layouts/message.ejs
@@ -18,7 +18,7 @@
          <div class="desc-text">
             Bạn vui lòng điền vào biểu mẫu dưới đây và chúng tôi sẽ liên hệ lại với bạn ngay khi có thể..
          </div>
-         <form action="message" method="POST">
+         <form action="/message" method="POST">
             <div class="field">
                <input name="username" type="text" placeholder="Họ và tên " required />
             </div>
