--- a/views/admin.layouts/header.ejs
+++ b/views/admin.layouts/header.ejs
@@ -3,6 +3,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
    <title><%= title %></title>
+
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" />
    <link
       rel="stylesheet"
@@ -24,4 +25,10 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
    ></script>
+   <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+   <script type="text/javascript">
+      jQuery(document).ready(function ($) {
+         $('.alert__success').delay(3000).fadeOut('slow');
+      });
+   </script>
 </head>
