--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -29,7 +29,7 @@
                   <td><%= user.phonenumber %></td>
                   <td><%= user.fullname %></td>
                   <td>
-                     <% if(user.email !== 'phungdinhhung1002@gmail.com') {%>
+                     <% if(user.email !== 'admin') {%>
                      <a href="/dashboard/deleteUser?id=<%= user._id %>" class="btn btn-danger">Xóa</a>
                      <% } %>
                   </td>
