--- a/views/admin/viewApartment.ejs
+++ b/views/admin/viewApartment.ejs
@@ -11,7 +11,7 @@
                </form>
             </div>
             <div class="card-body">
-               <table class="table">
+               <table class="table table-bordered">
                   <thead>
                      <tr>
                         <th class="text-center align-middle">STT</th>
