--- a/views/components/apartment.ejs
+++ b/views/components/apartment.ejs
@@ -176,7 +176,7 @@
             </div>
          </div>
       </div>
-      <% if (alert.length > 0) { %>
+      <%- include('../layouts/footer')%> <% if (alert.length > 0) { %>
       <div class="alert__success">
          <i class="las la-check-circle"></i>
          <div class="alert__content">
