--- a/views/admin/roles.ejs
+++ b/views/admin/roles.ejs
@@ -4,7 +4,7 @@
    <div class="content__body active">
       <div class="card">
          <div class="card-header">
-            <h4>Quản lý tài khoản</h4>
+            <h4>Quản lý vai trò</h4>
             <form>
                <div class="search-wrapper">
                   <input type="text" placeholder="Tìm kiếm" name="search" />
@@ -19,20 +19,18 @@
                      <th class="text-center align-middle">Email</th>
                      <th class="text-center align-middle">Số điện thoại</th>
                      <th class="text-center align-middle">Tên người dùng</th>
-                     <th class="text-center align-middle" class="center">Action</th>
+                     <th class="text-center align-middle" class="center">Vai trò</th>
                   </tr>
                </thead>
-               <% renderUsers.forEach((user, index) => { %>
+               <% users.forEach((user, index) => { %>
                <tbody>
                   <th class="text-center align-middle"><%= index +1 %></th>
                   <td class="text-center align-middle"><%= user.email %></td>
                   <td class="text-center align-middle"><%= user.phonenumber %></td>
                   <td class="text-center align-middle"><%= user.fullname %></td>
-                  <td class="text-center align-middle">
-                     <% if(user.fullname !== 'Admin') {%>
-                     <a href="/dashboard/deleteUser?id=<%= user._id %>" class="btn btn-danger">Xóa</a>
-                     <% } %>
-                  </td>
+                  <% if(user.role !== 'admin') { %>
+                  <td class="text-center align-middle"></td>
+                  <% } %>
                </tbody>
                <% })%>
             </table>
