--- a/views/admin/upload.ejs
+++ b/views/admin/upload.ejs
@@ -95,13 +95,27 @@
                      </div>
                      <div class="form-group" id="show">
                         <h6 style="padding-top: 10px">% đóng theo đợt</h6>
-                        <input
+                        <!-- <input
                            class="bg-primary border-0 text-white p-1 rounded mt-1 mb-1"
                            type="button"
                            onclick="add()"
                            value="Thêm đợt"
                            id="action"
-                        />
+                        /> -->
+                        <select id="selectBox" onchange="changeFunc(value);">
+                           <option class="option" disabled hidden selected>0</option>
+                           <option class="option" value="1">1</option>
+                           <option class="option" value="2">2</option>
+                           <option class="option" value="3">3</option>
+                           <option class="option" value="4">4</option>
+                           <option class="option" value="5">5</option>
+                           <option class="option" value="6">6</option>
+                           <option class="option" value="7">7</option>
+                           <option class="option" value="8">8</option>
+                           <option class="option" value="9">9</option>
+                           <option class="option" value="10">10</option>
+                        </select>
+                        <div class="show-option"></div>
                      </div>
                      <div class="form-group">
                         <h6 for="formFileMultiple" style="padding-top: 10px">Chọn ảnh phòng</h6>
@@ -122,19 +136,32 @@
 </div>
 <script>
    const $ = document.querySelector.bind(document);
+   const $$ = document.querySelectorAll.bind(document);
    $('.sidebar-menu_upload').classList.add('active');
 
-   function add() {
-      var htmlObj = document.getElementById('show');
-      htmlObj.innerHTML =
-         htmlObj.innerHTML +
-         "<input class ='form-control' type='phần trăm' name='phase' placeholder='Phần trăm của đợt 1' id='list_dot'/> " +
-         "  <input type='button' class='bg-danger p-1 border-0 rounded text-white mt-1 mb-1' value='xóa' onclick=dele() id='buttonDele' />";
-   }
-   function dele() {
+   function dele(value) {
       const deleelemeent = document.getElementById('list_dot');
       const buttonDele = document.getElementById('buttonDele');
       buttonDele.remove();
       deleelemeent.remove();
+   }
+
+   function deleOption() {
+      var htmlObj = $('.show-option');
+      htmlObj.innerHTML = '';
+   }
+
+   function changeFunc(value) {
+      if (value) {
+         deleOption();
+      }
+      var htmlObj = $('.show-option');
+      for (let index = 0; index < Number(value); index++) {
+         htmlObj.innerHTML =
+            htmlObj.innerHTML +
+            `<input class ='form-control' type='phần trăm' name='phase' placeholder='Phần trăm của đợt ${
+               index + 1
+            }' id='list_dot'/> `;
+      }
    }
 </script>
