--- a/public/styles/favoritelist.css
+++ b/public/styles/favoritelist.css
@@ -30,16 +30,32 @@ input {
    justify-content: center;
    align-items: center;
    width: 100%;
+   margin-right: 15px;
+   white-space: nowrap;
 }
 .button__delete_favorite {
    color: #fff;
    background: #dc3545;
    border: none;
-   padding: 6px 20px;
+   padding: 6px 15px;
    border-radius: 7px;
+}
+.btn-view-detail {
+   padding: 5px 7px;
+   color: black !;
+   font-size: 16px;
+   margin-right: 15px;
 }
 .button__delete_favorite:hover {
    color: #fff;
    background-color: #c82333;
    border-color: #bd2130;
+}
+.img-thumbnail {
+   padding: 0.25rem;
+   background-color: #fff;
+   border: 1px solid #dee2e6;
+   border-radius: 0.25rem;
+   max-width: 100%;
+   height: 100% !important;
 }
